related blog post spacing fix

--- a/_sass/_components/blog-post.scss
+++ b/_sass/_components/blog-post.scss
@@ -31,7 +31,6 @@
     @include u-margin-bottom($section-margins);
 
     @include at-media('tablet-lg') {
-      @include u-margin-y($section-margins);
       @include u-margin-x(auto);
       max-width: 61rem;
     }
